# advent-of-fpga-2025

./: .gitignore  .ocamlformat  CLAUDE.md  Install_dependencies_error.txt  LICENSE.md  README.md  advent-of-fpga-2025.opam
.github/workflows/: ci.yml
input_parser/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  dune  util.ml
src/: dune
src/common/: config.ml  input_ram.ml  loader.ml  top.ml  uart_rx.ml  uart_tx.ml
src/solvers/: day01_solver.ml  day02_solver.ml  day03_solver.ml  day04_solver.ml  day05_solver.ml  day06_solver.ml  day07_solver.ml  solver_intf.ml
test/: dune  test_day01_solver.ml  test_day02_solver.ml  test_day03_solver.ml  test_day04_solver.ml  test_day05_solver.ml  test_day06_solver.ml  test_day07_solver.ml  test_loader.ml  test_range_finder.ml  test_wrapper.ml
writeups/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md
